src/test/ui/codemap_tests/unicode.rs
extern "路濫狼á́́" fn foo() {} //~ ERROR invalid ABI

fn main() { }
